appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeTags::OpenModal::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to tags section"

- tapOn:
    id: "RecipeTags::OpenModal::RoundButton"
    label: "Tap on OCR button of recipe tags"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: tags
    when:
      platform: Android
# TODO iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select tags from modal for OCR"
    when:
      platform: Android
# TODO iOS

- repeat:
    while:
      visible:
        id: "RecipeValidation::ValidationQueue::Tag::SimilarityDialog::Title"
    commands:
      - tapOn:
          id: "RecipeValidation::ValidationQueue::Tag::SimilarityDialog::AddButton"
          label: "Select to add the tag"

      - tapOn:
          id: "RecipeValidation::ValidationQueue::Tag::ItemDialog::AddModal::ConfirmButton"
          label: "Validate the tag as is"

- extendedWaitUntil:
    visible:
      id: "RecipeTags::0::Chip"
    timeout: 10000
    label: "Wait for first tag to be populated by OCR"
