appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipePersons::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to persons field"

- tapOn:
    id: "RecipePersons::NumericTextInput"
    label: "Focus on persons input"

- eraseText:
    label: "Erase the default number of persons"

- inputText:
    text: "${PERSONS}"
    label: "Enter number of persons"

- pressKey: "ENTER"
