appId: "com.recipedia"
---
- tapOn:
    id: "RecipeTitle::CustomTextInput"
    label: "Focus on recipe title input"

- runFlow:
    when:
      visible:
        id: "RecipeTitle::CustomTextInput"
        text: ".*"
    commands:
      - eraseText:
          label: "Erase the existing title"

- inputText:
    text: "${TITLE}"
    label: "Enter recipe title"

- hideKeyboard:
    label: "Hide keyboard"
