appId: "com.recipedia"
---

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to energy kcal field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::NumericTextInput"
    label: "Tap energy kcal input"

- inputText:
    text: "250"
    label: "Enter energy kcal value"

- hideKeyboard:
    label: "Close keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKj::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to energy kj field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKj::NumericTextInput"
    label: "Tap energy kj input"

- inputText:
    text: "1000"
    label: "Enter energy kj value"

- hideKeyboard:
    label: "Close keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to fat field"


- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
    label: "Tap fat input"

- inputText:
    text: "10"
    label: "Enter fat value"

- hideKeyboard:
    label: "Close keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Carbohydrates::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to carbohydrates field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Carbohydrates::NumericTextInput"
    label: "Tap carbohydrates input"

- inputText:
    text: "30"
    label: "Enter carbohydrates value"

- hideKeyboard:
    label: "Close keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Sugars::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to sugar field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Sugars::NumericTextInput"
    label: "Tap sugar input"

- inputText:
    text: "1"
    label: "Enter sugar value"

- hideKeyboard:
    label: "Close keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fiber::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to fiber field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fiber::NumericTextInput"
    label: "Tap fiber input"

- inputText:
    text: "42"
    label: "Enter fiber value"

- hideKeyboard:
    label: "Close keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to protein field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    label: "Tap protein input"

- inputText:
    text: "15"
    label: "Enter protein value"

- hideKeyboard:
    label: "Close keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Salt::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to salt field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Salt::NumericTextInput"
    label: "Tap salt input"

- inputText:
    text: "3"
    label: "Enter salt value"

- hideKeyboard:
    label: "Close keyboard"
