appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to portion weight field"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    label: "Tap portion weight input"

- inputText:
    text: "200"
    label: "Enter portion weight value"

- pressKey: "ENTER"
