appId: "com.recipedia"
---
- tapOn:
    id: "Recipe::AppBar::Edit"
    label: "Enter the edit mode again"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    direction: DOWN
    centerElement: true
    speed: 95
    label: "Scroll to bottom of the screen for nutrition"


- tapOn:
    id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    label: "Add nutritional information"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::NumericTextInput"
    label: "Focus on Kcal input"

- inputText:
    text: "195"
    label: "Enter 195 kcal"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKj::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to KJ input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKj::NumericTextInput"
    label: "Focus on KJ input"

- inputText:
    text: "816"
    label: "Enter 816 kcal"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to fat input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
    label: "Focus on fat"

- inputText:
    text: "8.2"
    label: "Enter 8.2 g for fat"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::SaturatedFat::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to saturated fat input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::SaturatedFat::NumericTextInput"
    label: "Focus on saturated fat"

- inputText:
    text: "1.8"
    label: "Enter 1.8 for saturated fat"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Carbohydrates::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to carbohydrates input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Carbohydrates::NumericTextInput"
    label: "Focus on carbohydrates"

- inputText:
    text: "22"
    label: "Enter 22 for carbohydrates"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Sugars::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to sugar input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Sugars::NumericTextInput"
    label: "Focus on sugar"

- inputText:
    text: "2.5"
    label: "Enter 2.5 for sugar"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fiber::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to fiber input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fiber::NumericTextInput"
    label: "Focus on fiber"

- inputText:
    text: "1.2"
    label: "Enter 1.2 for fiber"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to protein input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    label: "Focus on protein"

- inputText:
    text: "12.5"
    label: "Enter 12.5 for protein"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Salt::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to salt input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Salt::NumericTextInput"
    label: "Focus on salt"

- inputText:
    text: "1.85"
    label: "Enter 1.85 for salt"

- hideKeyboard:
    label: "Hide keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 40
    label: "Scroll to portion weight input"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    label: "Focus on portion weight"

- inputText:
    text: "160"
    label: "Enter 160 for portion weight"

- hideKeyboard:
    label: "Hide keyboard"

- tapOn:
    id: "Recipe::AppBar::Validate"
    label: "Save the recipe"
