appId: "com.recipedia"
---
- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::AddButton"
    label: "Add ingredient to recipe"


- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    label: "Try to confirm adding the new ingredient"

- assertVisible:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    label: "Button is still there meaning the adding didn't worked"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::Menu::Button"
    label: "Open the dropdown of the type"

- tapOn:
    text: "Plant Protein"
    label: "Select Plant Protein type"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::Unit::CustomTextInput"
    label: "Focus on unit input"

- inputText:
    text: "kg"
    label: "Enter unit"

- hideKeyboard:
    label: "Hide keyboard"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::SeasonalityCalendar::5"
    label: "Select may for seasonality"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the new ingredient"
