appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeTags::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Action - Scroll to tags section"

- tapOn:
    id: "RecipeTags::RoundButton"
    label: "Add tag to recipe"

- tapOn:
    id: "RecipeTags::List::${TAG_INDEX}::CustomTextInput"
    label: "Focus on tag input field"

- inputText:
    text: "${TAG_NAME}"
    label: "Enter tag name"

- pressKey: "ENTER"
