appId: "com.recipedia"
---
- tapOn:
    id: "RecipeValidation::ValidationQueue::Tag::SimilarityDialog::AddButton"
    label: "Add tag to recipe"

- runFlow:
    file: "../../../asserts/alerts/en/addingTag.yaml"
    label: "Check that adding modal appears"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Tag::ItemDialog::AddModal::Name::CustomTextInput"
    point: "95%,50%"
    label: "Focus on tag name input field"

- inputText:
    text: "${EDIT_SUFFIX}"
    label: "Edit the tag name"

- hideKeyboard:
    label: "Hide the keyboard"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Tag::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the new tag"
