appId: "com.recipedia"
---
- runFlow:
    file: "openTestRecipe.yaml"
    label: "Navigate to and open E2E Test Recipe"

- tapOn:
    id: "SearchScreen::RecipeCards::0::Cover"
    label: "Open recipe from the card"


- scrollUntilVisible:
    element:
      id: "RecipeIngredients::0::IngredientName"
    direction: DOWN
    speed: 60
    label: "Scroll to ingredients section"

- assertVisible:
    id: "RecipeIngredients::0::IngredientName"
    text: "RecipeIngredient"
    label: "Verify ingredient appears in the recipe"

- assertVisible:
    id: "RecipeIngredients::0::QuantityAndUnit"
    text: "100 g"
    label: "Verify that unit is correctly displayed"

- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Close the recipe"
