name: "1: Search Bar Open/Close Flow"
appId: com.recipedia.app
tags:
  - search
---
- launchApp:
    label: "Setup - Launch app"

- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Action - Focus on search bar to open dropdown"

- hideKeyboard:
    label: "Action - Dismiss keyboard"

- runFlow:
    file: "../asserts/search/searchbar/searchBarNotFiltered.yaml"
    label: "Assert - Verify search bar dropdown shows all recipes"

- pressKey: "BACK"

- runFlow:
    file: "../asserts/search/en/assertSearchScreen.yaml"
    label: "Assert - Verify Search screen is back to normal view"

- tapOn:
    id: "BottomTabs::Home"
    label: "Cleanup - Navigate back to Home screen"
